panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__test_ptr_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_ptr_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition x~1 `long` 42)
         (definition p~2 `ptr<long>` (addressof (name x~1 `long`)))
         (definition pp~3 `ptr<ptr<long>>` (addressof (name p~2 `ptr<long>`)))
         (return (deref (deref (name pp~3 `ptr<ptr<long>>`)))))))

----- stderr -----
